Fix spacing and positioning issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,13 +36,14 @@ body,
   padding: 1.2rem;
   display: grid;
   grid-template-columns: minmax(0, 1fr);
-  grid-template-rows: max-content 1fr 100px;
+  grid-template-rows: max-content 1fr min-content;
 }
 
 .game-header {
   border: solid 5px var(--header-outline);
   border-radius: 10px;
   grid-row: 1;
+  margin-bottom: 2.5rem;
 }
 
 .padded-container {
@@ -168,15 +169,21 @@ body,
   display: grid;
   grid-template-areas: "player house"
                        "result result";
+  height: 100%;
+  row-gap: 2.5rem;
 }
 
 .played-hand {
   position: relative;
-  margin-top: 80px;
   display: flex;
   /* changes to column-reverse on desktop */
   flex-direction: column;
-  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.played-hand .hand {
+  margin-bottom: 1em;
 }
 
 #player-hand {
@@ -194,12 +201,11 @@ body,
 .picked-text {
   color: white;
   text-align: center;
-  margin-top: 1em;
 }
 
 .result {
   grid-area: result;
-  margin-top: 80px;
+  margin-bottom: 2rem;
 }
 
 #result-text {
@@ -219,7 +225,6 @@ body,
   justify-content: center;
   align-items: center;
   letter-spacing: 0.1em;
-  margin-bottom: 40px;
   transition: all var(--transition-duration) ease;
   border: solid 2px white;
 }
@@ -231,8 +236,8 @@ body,
 }
 
 .rules {
-  height: 100px;
   grid-row: 3;
+  margin-bottom: 2.5rem;
 }
 
 #rules-button {
@@ -394,8 +399,11 @@ body,
   }
 
   .picked-text {
-    margin-top: 0;
     margin-bottom: 60px;
+  }
+
+  .result {
+    margin-bottom: 0;
   }
 
   .rules {
